--- a/ECommerce/Views/Cart/Index.cshtml
+++ b/ECommerce/Views/Cart/Index.cshtml
@@ -3,7 +3,9 @@
 @model ShoppingCart
 @inject UserManager<User> userManager;
 
-
+   <!--
+       add ajax for the incerment ind dcerement and delete , check the optionID and SubOptionID 
+   -->
 
 <div class="content page-container-cart" id="cart-content">
     <div class="the-container">
@@ -12,7 +14,7 @@
             {
 
                 int numProduct = 0;
-
+                <form id="submitForm" asp-action="_Checkout" asp-controller="Cart" method="post">
                 @foreach (var item in Model.Products)
                 {
                     
@@ -55,11 +57,11 @@
                                 @{
                                     if (item.Quantity < 50)
                                     {
-                                        <!--<form method="post" asp-action="incrementQuantity" asp-controller="Cart">-->
-                                            <input type="hidden" name="productId" value="@item.Id" />
+                                            <form method="post" id="IncrementForm" asp-action="incrementQuantity" asp-controller="Cart">
+                                            <input type="hidden" name="productId" asp-for="Products[numProduct].Id" />
                                             <input type="hidden" name="Quantity" value="@item.Quantity" />
-                                            <button type="submit" class="btn quantity-btn" id="incrementQuantity"><i class="bi bi-plus"></i></button>
-                                        <!--</form>-->
+                                            <button form="IncrementForm" type="submit" class="btn quantity-btn" id="incrementQuantity"><i class="bi bi-plus"></i></button>
+                                            </form>
                                     }
                                     else
                                     {
@@ -75,11 +77,11 @@
                                 @{
                                     if (item.Quantity > 1)
                                     {
-                                        <!--<form method="post" asp-action="decrementQuantity" asp-controller="Cart">-->
-                                            <input type="hidden" name="productId" value="@item.Id" />
+                                        <form method="post" id="decrementForm" asp-action="decrementQuantity" asp-controller="Cart">
+                                                <input type="hidden" name="productId" asp-for="Products[numProduct].Id" />
                                             <input type="hidden" name="Quantity" value="@item.Quantity" />
-                                            <button type="submit" class="btn quantity-btn" id="decrementQuantity"><i class="bi bi-dash"></i></button>
-                                        <!--</form>-->
+                                            <button form="decrementForm" type="submit" class="btn quantity-btn" id="decrementQuantity"><i class="bi bi-dash"></i></button>
+                                        </form>
                                     }
                                     else
                                     {
@@ -107,9 +109,9 @@
                                         if (selectedOption != null && selectedOption.OptionId == mainOption.MainOptionId)
                                         {
                                             <!-- معالجة العناصر المحددة -->
-                                            <input hidden asp-for="Products[numProduct].ProductViewModel.SelectedOptions[j].OptionId" value="@mainOption.MainOptionId" />
+                                            <input hidden  name="Products[@numProduct].ProductViewModel.SelectedOptions[@j].OptionId" value="@mainOption.MainOptionId" />
 
-                                            <select class="form-select text-center" style="padding:3px; width:30%;" asp-for="Products[numProduct].ProductViewModel.SelectedOptions[j].SubOptionId" >
+                                            <select class="form-select text-center" style="padding:3px; width:30%;" name="Products[@numProduct].ProductViewModel.SelectedOptions[@j].SubOptionId">
                                                 @foreach (var subOption in mainOption.SubOptions)
                                                 {
                                                     if (subOption.SubOptionId == -1)
@@ -160,11 +162,12 @@
 
                     </div>
                     <!-- Inside the loop for products -->
-                    <input type="hidden" name="Products[@numProduct].SelectedOptions" value="1" />
 
                     numProduct++;
-                }
 
+                }
+                    <button type="submit" form="submitForm">click</button>
+                </form>
                 <!-- العناصر الأخرى هنا -->
 
                 <div class="cart-total-box">
