--- a/ECommerce/Views/Home/Index.cshtml
+++ b/ECommerce/Views/Home/Index.cshtml
@@ -5,6 +5,10 @@
     ViewData["Title"] = "الصفحة الرئيسية";
 }
 
+<script>
+    document.getElementById("container").classList.remove('me-0');
+    document.getElementById("container").classList.remove('pe-0');
+</script>
 
 <span id="RegisterNotfi" class="d-none">@TempData["RegisterNotfi"]</span>
 
