--- a/ECommerce/Views/Cart/Index.cshtml
+++ b/ECommerce/Views/Cart/Index.cshtml
@@ -3,28 +3,26 @@
 @model ShoppingCart
 @inject UserManager<User> userManager;
 
-   <!--
-       add ajax for the incerment ind dcerement and delete , check the optionID and SubOptionID 
-   -->
 
+<script>
+    document.getElementById("container").classList.remove('me-0');
+    document.getElementById("container").classList.remove('pe-0');
+</script>
 <div class="content page-container-cart" id="cart-content">
     <div class="the-container">
         @{
-            if(Model.Products.Count > 0)
+            <form id="submitForm" asp-action="_Checkout" asp-controller="Cart" method="post">
+            @if(Model.Products.Count > 0)
             {
-
                 int numProduct = 0;
-                <form id="submitForm" asp-action="_Checkout" asp-controller="Cart" method="post">
                 @foreach (var item in Model.Products)
                 {
-                    
+
                     <div class="product-cart">
-                        <!-- <form method="post" asp-action="RemoveFromCart" asp-controller="Cart">-->
                             <input type="hidden" name="productId" value="@item.Id" />
-                            <button type="submit" class="delete-button">
+                            <button onclick="confirmAlert(event,@item.Id)" class="delete-button">
                                 <i class="bi bi-x-circle-fill deleteProduct"></i>
                             </button>
-                        <!-- </form>-->
 
                         <div class="product-info">
                             <a asp-action="details" asp-controller="products" asp-route-id="@item.Id" class="text-decoration-none text-reset">
@@ -54,42 +52,40 @@
 
                             <label for="quantity">الكمية:</label>
                             <div class="form-group quantity-btn-container">
-                                @{
-                                    if (item.Quantity < 50)
-                                    {
-                                            <form method="post" id="IncrementForm" asp-action="incrementQuantity" asp-controller="Cart">
-                                            <input type="hidden" name="productId" asp-for="Products[numProduct].Id" />
-                                            <input type="hidden" name="Quantity" value="@item.Quantity" />
-                                            <button form="IncrementForm" type="submit" class="btn quantity-btn" id="incrementQuantity"><i class="bi bi-plus"></i></button>
-                                            </form>
+                                <div class="product-row">
+
+                                    @{
+                                        if (item.Quantity < 50)
+                                        {
+
+                                                <input type="hidden" name="productId" class="product-id" value="@item.Id" />
+                                                <button type="button" class="btn quantity-btn increment-quantity text-light"><i class="bi bi-plus"></i></button>
+
+                                        }
+                                        else
+                                        {
+                                            <button type="button" class="btn quantity-btn text-light" id="incrementQuantity"><i class="bi bi-plus"></i></button>
+                                        }
                                     }
-                                    else
-                                    {
-                                        <button type="button" class="btn quantity-btn" id="incrementQuantity"><i class="bi bi-plus"></i></button>
-                                    }
-                                }
 
 
-                                <input type="number" class="form-control d-inline-block mx-2 quantity-input text-center px-2" id="quantity" name="quantity" value="@item.Quantity" min="1" max="50" readonly>
-                                <!-- إضافة حقل الكمية كـ input مخفي -->
-                                <input type="hidden" id="hiddenQuantity" name="hiddenQuantity" value="1">
-                                <!-- زر نقص الكمية -->
-                                @{
-                                    if (item.Quantity > 1)
-                                    {
-                                        <form method="post" id="decrementForm" asp-action="decrementQuantity" asp-controller="Cart">
-                                                <input type="hidden" name="productId" asp-for="Products[numProduct].Id" />
-                                            <input type="hidden" name="Quantity" value="@item.Quantity" />
-                                            <button form="decrementForm" type="submit" class="btn quantity-btn" id="decrementQuantity"><i class="bi bi-dash"></i></button>
-                                        </form>
-                                    }
-                                    else
-                                    {
-                                        <button type="button" class="btn quantity-btn" id="decrementQuantity"><i class="bi bi-dash"></i></button>
-                                    }
-                                }
+                                        <input type="number" class="form-control d-inline-block mx-2 quantity-input text-center px-2" name="quantity" value="@item.Quantity" min="1" max="50" readonly>
+                                        <input type="hidden" class="hidden-quantity" name="hiddenQuantity" value="1">
+                                    @{
+                                        if (item.Quantity > 1)
+                                        {
 
+                                            <input type="hidden" name="productId" class="product-id" value="@item.Id" />
+                                            <button type="button" class="btn quantity-btn decrement-quantity text-light"><i class="bi bi-dash"></i></button>
 
+                                        }
+                                        else
+                                        {
+                                            <button type="button" class="btn quantity-btn text-light" id="decrementQuantity"><i class="bi bi-dash"></i></button>
+                                        }
+                                    }
+
+                                </div>
                             </div>
 
 
@@ -109,9 +105,11 @@
                                         if (selectedOption != null && selectedOption.OptionId == mainOption.MainOptionId)
                                         {
                                             <!-- معالجة العناصر المحددة -->
+                                            <label>@mainOption.MainOptionName</label>
                                             <input hidden  name="Products[@numProduct].ProductViewModel.SelectedOptions[@j].OptionId" value="@mainOption.MainOptionId" />
 
                                             <select class="form-select text-center" style="padding:3px; width:30%;" name="Products[@numProduct].ProductViewModel.SelectedOptions[@j].SubOptionId">
+                                                    <option value="" disabled>اختر @mainOption.MainOptionName</option>
                                                 @foreach (var subOption in mainOption.SubOptions)
                                                 {
                                                     if (subOption.SubOptionId == -1)
@@ -133,8 +131,10 @@
                                             <!-- معالجة العناصر غير المحددة -->
                                             <div class="form-group">
                                                 <label>@mainOption.MainOptionName</label>
-                                                <input hidden asp-for="@mainOption.MainOptionId" value="@mainOption.MainOptionId" />
-                                                <select class="form-select text-center" style="padding:3px; width:30%;" asp-for="@mainOption.SubOptions[j].SubOptionId">
+                                                <input hidden name="Products[@numProduct].ProductViewModel.SelectedOptions[@i].OptionId" value="@mainOption.MainOptionId" />
+                                                <select class="form-select text-center" style="padding:3px; width:30%;" name="Products[@numProduct].ProductViewModel.SelectedOptions[@i].SubOptionId">
+                                                    <option value="" selected disabled>اختر @mainOption.MainOptionName</option>
+
                                                     @foreach (var subOption in mainOption.SubOptions)
                                                     {
                                                         if (subOption.SubOptionId == -1)
@@ -148,27 +148,21 @@
                                                         }
                                                     }
                                                 </select>
-                                            </div>
+                                                </div>
+                                            }
                                         }
-                                    }
 
-                                }   
+                                    }   
 
-                            </div>
-                            
+                             </div>
+
                         </div>
 
 
 
                     </div>
-                    <!-- Inside the loop for products -->
-
-                    numProduct++;
-
+                        numProduct++;
                 }
-                    <button type="submit" form="submitForm">click</button>
-                </form>
-                <!-- العناصر الأخرى هنا -->
 
                 <div class="cart-total-box">
                     <div style="display:flex; align-items:center; justify-content:space-between; position:relative; width:100%; padding: 10px 15px;">
@@ -182,47 +176,19 @@
                 <div class="cart-nav row shipping-bar">
                     <div class="col-sm-9" style="width:83% !important;" id="free-shipping-bar">
                     </div>
-                    <div class="col-sm-3 cart-next-button" style="width:17% !important;">
+                    <div class="col-sm-3 cart-next-button mt-5 mb-5" style="">
                         @if (User.Identity.IsAuthenticated)
                         {
-                            //<a asp-action="_Checkout" asp-controller="Cart" id="submit_cart" class="cart-nav-solid">
-                            //    <span style="padding-left:10px;">إتمام الطلب</span>
-                            //    <i class="bi bi-arrow-left" style="font-size:18px !important; line-height:0px;"></i>
-                            //</a>
-                            <!-- إضافة الحقول المطلوبة من نموذج CheckoutViewModel -->
 
-
-                            <form asp-action="_Checkout" asp-controller="Cart" method="post">
-                                @for (int i = 0; i < Model.Products.Count; i++)
-                                {
-                                    var product = Model.Products[i];
-                                    var selectedOptions = product.ProductViewModel?.SelectedOptions ?? new List<ProductOptionViewModel>();
-
-                                    <input type="hidden" name="Products[@i].Id" value="@product.Id" />
-                                    <input type="hidden" name="Products[@i].Quantity" value="@product.Quantity" />
-
-                                    <!-- Other product fields... -->
-                                    @for (int j = 0; j < selectedOptions.Count; j++)
-                                    {
-                                        var selectedOption = selectedOptions[j];
-
-                                        <input type="hidden" name="Products[@i].ProductViewModel.SelectedOptions[@j].OptionId" value="@selectedOption.OptionId" />
-                                        <input type="hidden" name="Products[@i].ProductViewModel.SelectedOptions[@j].SubOptionId" value="@selectedOption.SubOptionId" />
-
-
-                                    }
-                                }
-
-                                <button type="submit" class="cart-nav-solid">
-                                    <span style="padding-left:10px;">إتمام الطلب</span>
-                                    <i class="bi bi-arrow-left" style="font-size:18px !important; line-height:0px;"></i>
+                                <button type="submit" style="background-color:rgb(175, 155, 65) !important;" form="submitForm" class="btn text-light">
+                                        <span style="padding-left:10px;">إتمام الطلب</span>
+                                        <i class="bi bi-arrow-left" style="font-size:18px !important; line-height:0px;"></i>
                                 </button>
-                            </form>
 
                         }
                         else
                         {
-                            <a role="button" id="submit_cart" class="cart-nav-solid" onclick="showInPopup('@Url.Action("Login","Account",null, Context.Request.Scheme)','تسجيل دخول')">
+                                <a role="button" id="submit_cart" class="cart-nav-solid" onclick="showInPopup('@Url.Action("Login","Account",null, Context.Request.Scheme)','تسجيل دخول')">
                                 <span style="padding-left:10px;">إتمام الطلب</span>
                                 <i class="bi bi-arrow-left" style="font-size:18px !important; line-height:0px;"></i>
                             </a>
@@ -244,6 +210,7 @@
                 </div>
             }
 
+            </form>
         }
 
 
@@ -253,9 +220,114 @@
     
 
 @section Scripts{
-        <script>
-            document.getElementById("container").classList.remove('me-0');
-            document.getElementById("container").classList.remove('pe-0');
-        </script>
-        
+
+
+    <script>
+        $(document).ready(function () {
+            $(".increment-quantity").on("click", function () {
+                var incrementButton = $(this);
+                incrementButton.prop("disabled", true);
+
+                var row = incrementButton.closest(".product-row");
+                var productId = row.find(".product-id").val();
+                var quantityInput = row.find(".quantity-input");
+                var hiddenQuantityInput = row.find(".hidden-quantity");
+
+                $.ajax({
+                    type: "POST",
+                    url: "/Cart/incrementQuantity",
+                    data: { productId: productId, quantity: quantityInput.val() },
+                    success: function (newQuantity) {
+                        quantityInput.val(newQuantity);
+
+                        hiddenQuantityInput.val(newQuantity);
+
+                        setTimeout(function () {
+                            incrementButton.prop("disabled", false);
+                        }, 800);
+
+                        window.location.href = '@Url.Action("Index", "Cart")';
+
+                    },
+                    error: function (error) {
+                        console.error(error);
+
+                        incrementButton.prop("disabled", false);
+                    }
+                });
+            });
+        });
+    </script>
+
+
+
+    <script>
+        $(document).ready(function () {
+            $(".decrement-quantity").on("click", function () {
+                var decrementButton = $(this);
+                decrementButton.prop("disabled", true);
+
+                var row = decrementButton.closest(".product-row");
+                var productId = row.find(".product-id").val();
+                var quantityInput = row.find(".quantity-input");
+                var hiddenQuantityInput = row.find(".hidden-quantity");
+
+                $.ajax({
+                    type: "POST",
+                    url: "/Cart/decrementQuantity",
+                    data: { productId: productId, quantity: quantityInput.val() },
+                    success: function (newQuantity) {
+                        quantityInput.val(newQuantity);
+
+                        hiddenQuantityInput.val(newQuantity);
+
+                        setTimeout(function () {
+                            decrementButton.prop("disabled", false);
+                        }, 800);
+
+                        window.location.href = '@Url.Action("Index", "Cart")';
+
+                    },
+                    error: function (error) {
+                        console.error(error);
+
+                        decrementButton.prop("disabled", false);
+                    }
+                });
+            });
+        });
+    </script>
+
+    <script>
+        function confirmAlert(e, productId) {
+            e.preventDefault();
+
+            Swal.fire({
+                title: 'هل انت متأكد؟',
+                text: "سيتم حذف المنتج اذا تم التاكيد",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#d33',
+                cancelButtonColor: '#3085d6',
+                confirmButtonText: 'نعم, احذف المنتج'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    var idToDelete = productId;
+
+                    $.ajax({
+                        url: '@Url.Action("RemoveFromCart", "Cart")',
+                        method: 'POST',
+                        data: { productId: idToDelete },
+                        success: function (data) {
+                            console.log('تم حذف المنتج');
+                            window.location.href = '@Url.Action("Index", "Cart")';
+                        },
+                        error: function (error) {
+                            console.error('حدث خطأ أثناء حذف المنتج');
+                        }
+                    });
+                }
+            })
+        }
+    </script>
 }
