--- a/ECommerce/Views/Products/details.cshtml
+++ b/ECommerce/Views/Products/details.cshtml
@@ -20,7 +20,7 @@
                 }
 
                 <!-- سعر المنتج -->
-                <h5 class="card-text pe-2" style="color:rgb(175, 155, 65);">50 ر.س</h5>
+                <h5 class="card-text pe-2" style="color:rgb(175, 155, 65);">@Model.Price ر.س</h5>
                 <!-- صورة المنتج -->
                 <img src="~/@Model.Image" class="card-img-top mt-4 mb-4 border-2 shadow" alt="Product Image">
                 @if(Model.Description != null)
